--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/27471_IGDB-188x250.jpg" alt="Imagem do jogo Minecraft"> 
                             </a>
                         </li>
+
+                        <li>
+                            <a
+                            target="_blank"
+                            href="https://www.twitch.tv/directory/game/The%20Legend%20of%20Zelda%3A%20Breath%20of%20the%20Wild">
+                               <img src="https://static-cdn.jtvnw.net/ttv-boxart/110758_IGDB-90x120.jpg" alt="Imagem do jogo The Legend Of Zelda BOTW"> 
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </section>
