--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <a
                             target="_blank"
                             href="https://www.twitch.tv/alanzoka">
-                               <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/15cec952-c1ba-4ff8-a79c-53c2fa5bd269-profile_image-150x150.png" alt="Imagem de Alanzoka"> 
+                               <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/64d44235-1dee-4bca-95da-bee1ee96eea3-profile_image-70x70.png" alt="Imagem de Alanzoka"> 
                             </a>
                         </li>
 
@@ -84,7 +84,7 @@
                             <a
                             target="_blank"
                             href="https://www.twitch.tv/cellbit">
-                               <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/cb885149-f7f7-48f0-99ae-fe0a386ed3e2-profile_image-150x150.png" alt="Imagem de Cellbit"> 
+                               <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/0595cdd0-65a7-4fa3-996d-323cf3a54be1-profile_image-70x70.png" alt="Imagem de Cellbit"> 
                             </a>
                         </li>
 
@@ -134,7 +134,7 @@
                         <li>
                             <a
                             target="_blank"
-                            href="https://www.twitter.com/VitorMeireles17">
+                            href="https://www.twitter.com/vito_meireles">
                                 <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M16 11C16 8.25003 18.3125 5.96253 21.0625 6.00003C22.0256 6.01115 22.9649 6.30018 23.7676 6.83237C24.5704 7.36457 25.2023 8.11728 25.5875 9.00003H30L25.9625 13.0375C25.7019 17.0932 23.9066 20.8975 20.9415 23.6769C17.9764 26.4562 14.0641 28.002 10 28C6 28 5 26.5 5 26.5C5 26.5 9 25 11 22C11 22 3 18 5 7.00003C5 7.00003 10 12 16 13V11Z" stroke="#2871FF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>
